More measures to prevent scrolling on show page on mobile.

--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -49,6 +49,11 @@ html.js .hide-if-no-js { display: block; }
   padding: 10px 0 0 0;
 }
 
+html.touch {
+  width:    100%;
+  position: fixed;
+}
+
 .real-time-alert {
   display: none;
   position: fixed;
@@ -108,6 +113,10 @@ button.navbar-item:last-of-type { margin-right: 8px; }
 
 /* Until we can get it styled appropriately for mobile */
 .sidebar { display: none; }
+
+html.touch .interface-body {
+  padding-bottom: 200px;
+}
 
 .metronome-body {
   max-width: 446px;
